--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="card">
-    <img src="/images/image-qr-code.png" alt="qr-scanner">
+    <img src="./images/image-qr-code.png" alt="qr-scanner">
     <h1>
       Improve your front-end skills by building projects
     </h1>
